i added new design and solve previous design alignment problem

--- a/src/Components/Payments/PaymentsForm.css
+++ b/src/Components/Payments/PaymentsForm.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 input,
 button {
   -webkit-appearance: none;
@@ -11,23 +7,8 @@ button {
   border-style: none;
 }
 
-html {
-  background-color: #6772e5;
-  font-size: 16px;
-  font-family: Roboto, Open Sans, Segoe UI, sans-serif;
-  font-weight: 500;
-  font-style: normal;
-  text-rendering: optimizeLegibility;
-  height: 100%;
-}
-
-body {
-  height: 100%;
-  margin: 0;
-}
-
 #root {
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -58,7 +39,7 @@ body {
   margin: 0 15px 20px;
   padding: 0;
   border-style: none;
-  background-color: #7795f8;
+  background-color: #1890ff;
   will-change: opacity, transform;
   box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08),
     inset 0 1px 0 #829fff;
@@ -129,9 +110,9 @@ body {
   width: calc(100% - 30px);
   height: 40px;
   margin: 40px 15px 0;
-  background-color: #f6a4eb;
+  background-color: #ff4d4f;
   box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08),
-    inset 0 1px 0 #ffb9f6;
+    inset 0 1px 0 #ff4d4f;
   border-radius: 4px;
   color: #fff;
   font-weight: 600;
